<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/back_button"
            app:srcCompat="@drawable/back_arrow"
            android:contentDescription="@string/back_button" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/animals"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggle_view"
            android:minHeight="35dp"
            android:textOn="@string/grid"
            android:textOff="@string/list"
            android:background="@drawable/toggle_button_colours"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/search_bar_shape"
            android:id="@+id/mammals"
            android:minHeight="35dp"
            android:text="@string/mammals"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/birds"
            android:layout_marginEnd="5dp"
            android:minHeight="35dp"
            android:background="@drawable/search_bar_shape"
            android:text="@string/birds"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:minHeight="35dp"
            android:id="@+id/reptiles"
            android:background="@drawable/search_bar_shape"
            android:text="@string/reptiles"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="35dp"
            android:id="@+id/fish"
            android:layout_marginEnd="5dp"
            android:background="@drawable/search_bar_shape"
            android:text="@string/fish"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/amphibians"
            android:text="@string/amphibians"
            android:layout_marginEnd="5dp"
            android:minHeight="35dp"
            android:background="@drawable/search_bar_shape"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/invertebrate"
            android:text="@string/invertebrate"
            android:layout_marginEnd="5dp"
            android:minHeight="35dp"
            android:background="@drawable/search_bar_shape"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/others"
            android:id="@+id/others"
            android:minHeight="35dp"
            android:background="@drawable/search_bar_shape"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/animals_rv"/>
</LinearLayout>