<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Gradient Rectangle at the top -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="266dp"
            android:background="@drawable/home_gradient_rectangle">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/welcome"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Smaller Rounded White Box -->


            <RelativeLayout
                android:id="@+id/slideOfDayItem"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_below="@id/welcomeText"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/rounded_background"
                android:elevation="10dp"
                android:padding="16dp">


                <!-- Image on the left -->
                <ImageView
                    android:id="@+id/slideImage"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/rounded_background"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/testing"
                    android:contentDescription="@string/slide_of_the_day" />

                <!-- Slide of the Day Text -->
                <TextView
                    android:id="@+id/slideOfDayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/slideImage"
                    android:text="@string/slide_of_the_day"
                    android:textColor="@color/secondaryBlue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/slideOfDayName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/slideOfDayText"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="-1dp"
                    android:layout_toEndOf="@id/slideImage"
                    android:text="@string/human_liver_tissue"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/slideOfDayCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/slideOfDayName"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="3dp"
                    android:layout_toEndOf="@id/slideImage"
                    android:background="@drawable/rounded_background2"
                    android:backgroundTint="@color/lightGray"
                    android:paddingLeft="9dp"
                    android:paddingTop="3dp"
                    android:paddingRight="9dp"
                    android:paddingBottom="3.2dp"
                    android:text="@string/people"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/slideOfDayCategory2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/slideOfDayName"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_toEndOf="@id/slideOfDayCategory"
                    android:background="@drawable/rounded_background2"
                    android:backgroundTint="@color/lightGray"
                    android:paddingLeft="9dp"
                    android:paddingTop="3dp"
                    android:paddingRight="9dp"
                    android:paddingBottom="3.2dp"
                    android:text="@string/cell"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/slideDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/slideOfDayCategory"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@id/slideImage"
                    android:text="@string/sample_description"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/slideNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/slideDescription"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/slideImage"
                    android:gravity="end"
                    android:text="@string/sample_slide_number"
                    android:textColor="@color/mainBlue"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>

        <!-- Categories -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categoriesText"
                android:text="@string/categories"
                android:textSize="23sp"
                android:textColor="@color/mainBlue"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/categoriesText"
                android:layout_marginTop="18dp"
                android:weightSum="4"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/peopleCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginEnd="5dp">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:padding="14dp"
                        android:background="@drawable/circle_background"
                        android:src="@drawable/ic_human"
                        android:contentDescription="@string/people" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/people"
                        android:textSize="12sp"
                        android:textColor="#000000"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/animalCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginEnd="5dp">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:padding="20dp"
                        android:background="@drawable/circle_background"
                        android:src="@drawable/ic_animal"
                        android:contentDescription="@string/animals" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/animals"
                        android:textSize="12sp"
                        android:textColor="#000000"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/plantCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginEnd="5dp">


                <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:padding="20dp"
                        android:background="@drawable/circle_background"
                        android:src="@drawable/ic_plant"
                        android:contentDescription="@string/plants" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/plants"
                        android:textSize="12sp"
                        android:textColor="#000000"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bacteriaCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginEnd="10dp">


                <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:padding="19dp"
                        android:background="@drawable/circle_background"
                        android:src="@drawable/ic_bacteria"
                        android:contentDescription="@string/bacteria" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/bacteria"
                        android:textSize="12sp"
                        android:textColor="#000000"/>
                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

        <!-- Recommended Text -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recommendedText"
                android:text="@string/recommended"
                android:textSize="23sp"
                android:textColor="@color/mainBlue"
                android:textStyle="bold"/>
        </RelativeLayout>

        <!-- Recommended Slides -->
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="15dp"
            android:layout_marginStart="-10dp"
            android:id="@+id/recommendedRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingBottom="16dp"
            android:orientation="horizontal"/>

    </LinearLayout>
</ScrollView>
