<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity">

    <LinearLayout
        android:id="@+id/upload_slide_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Add new Slide Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Add new Slide"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:textColor="@android:color/black" />

        <!-- Add new Slide Subtext -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Slides, if approved, will be accessible for all"
            android:textSize="14sp"
            android:textColor="#676767"/>

        <TextView
            android:layout_marginTop="-3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="users to view!"
            android:textSize="14sp"
            android:textColor="#676767" />



        <!--    Slide Image-->
        <ImageView
            android:id="@+id/slide_image"
            android:layout_width="272dp"
            android:layout_height="205dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/testing" />

        <Button
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_image"
            android:background="@drawable/rounded_button1"
            android:textColor="@color/white"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">
        </Button>

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="5dp"
            android:text="Slide Name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/slide_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="ie. Human Kidney Cell"
            android:paddingLeft="10dp"
            android:inputType="text"
            android:textSize="17sp"
            android:background="@drawable/rounded_border_edittext" />


        <!--    Category Name and Spinner-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/category_spinner"
            android:entries="@array/categories"
            android:background="@drawable/rounded_border_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:spinnerMode="dropdown"
            android:enabled="true"
            android:textColor="@color/black"/>

        <!--    Category Name and Spinner-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:text="Sub-category (if applicable)"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/subcategory_spinner"
            android:entries="@array/subcategories"
            android:background="@drawable/rounded_border_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:spinnerMode="dropdown"
            android:enabled="false"
            android:textColor="@color/black"/>


        <!-- Description-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:text="Comment"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/slide_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="Notable presence of abnormal cells in the sample"
            android:paddingLeft="10dp"
            android:inputType="text"
            android:textSize="17sp"
            android:background="@drawable/rounded_border_edittext" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintTop_toBottomOf="@id/category_spinner">

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="UPLOAD SLIDES" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/cancel"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>